[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lametric"]

[project]
name = "lametric-py"
version = "0.1.0"
description = ""
authors = [
    { name = "Caspar Weber" }
]
dependencies = [
    "yarl>=1.23.0",
    "aiohttp>=3.13.5",
    "backoff>=2.2.1",
    "mashumaro>=3.20",
    "awesomeversion>=25.8.0",
    "orjson>=3.11.8",
]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }

# ------------------------------------------------------------------------------
# UV & DEV DEPENDENCIES
# ------------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
    "python-semantic-release>=10.5.3",
    "commitizen>=4.15.0",
]

# ------------------------------------------------------------------------------
# RUFF (Linter & Formatter)
# ------------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# E: Pycodestyle, F: Pyflakes, I: Isort (Imports), N: Naming, UP: Upgrade, B: Bugbear
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ------------------------------------------------------------------------------
# MYPY (Type Checking)
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

# ------------------------------------------------------------------------------
# PYTEST (Testing)
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

# ------------------------------------------------------------------------------
# SEMANTIC RELEASE (Auto-Versioning)
# ------------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore", "ci"]

[tool.semantic_release.branches.main]
match = "main"
